--- a/使用手册.md
+++ b/使用手册.md
@@ -44,8 +44,8 @@
  
  #优化改进  
 > 1.针对日志问题的分库分表方案:  
->  1) 提供基于sharding-jdbc的分库分表支持.----侵入性比较强  
->  2) 基于mycat实现日志表(qrtz_exe_log)分库分表.----无侵入性  
+>>  提供基于sharding-jdbc的分库分表支持.----侵入性比较强  
+>> 基于mycat实现日志表(qrtz_exe_log)分库分表.----无侵入性  
   
 > 2.欢迎giter们提供更多更好的点子来共同改进插件.  
  
